@@ -31,6 +31,7 @@ import eu.urbancoders.zonkysniper.dataobjects.Rating;
 import eu.urbancoders.zonkysniper.events.Invest;
 import eu.urbancoders.zonkysniper.events.InvestAdditional;
 import eu.urbancoders.zonkysniper.integration.ZonkyClient;
+import eu.urbancoders.zonkysniper.wallet.WalletActivity;
 import org.greenrobot.eventbus.EventBus;
 
 import java.text.DecimalFormat;
@@ -68,7 +69,8 @@ public class InvestingActivity extends ZSViewActivity {
                     Intent userSettingsIntent = new Intent(InvestingActivity.this, SettingsUser.class);
                     startActivity(userSettingsIntent);
                 } else {
-                    // TODO prejit do penezenky, pokud vidim zustatek
+                    Intent walletIntent = new Intent(InvestingActivity.this, WalletActivity.class);
+                    startActivity(walletIntent);
                 }
             }
         });
@@ -134,9 +136,11 @@ public class InvestingActivity extends ZSViewActivity {
 
         // obrazek jako pozadi headeru
         ImageView headerImage = (ImageView) findViewById(R.id.headerImage);
-        Picasso.with(ZonkySniperApplication.getInstance().getApplicationContext())
-                .load(ZonkyClient.BASE_URL + loan.getPhotos().get(0).getUrl())
-                .into(headerImage);
+        if(loan.getPhotos() != null && loan.getPhotos().size() > 0) {
+            Picasso.with(ZonkySniperApplication.getInstance().getApplicationContext())
+                    .load(ZonkyClient.BASE_URL + loan.getPhotos().get(0).getUrl())
+                    .into(headerImage);
+        }
 
         // detaily pujcky
         TextView header = (TextView) findViewById(R.id.header);
@@ -197,7 +201,7 @@ public class InvestingActivity extends ZSViewActivity {
                 // tjadaa, investujeme...
                 MyInvestment investment = new MyInvestment();
                 investment.setLoanId(loan.getId());
-                investment.setAmount(new Double(toInvest));
+                investment.setAmount(Double.valueOf(toInvest));
                 if(!captchaResponse.equalsIgnoreCase("NOT_REQUIRED")) {
                     investment.setCaptcha_response(captchaResponse);
                 }
